Fixing thanks page on mobile devices

--- a/_sass/pages/_thanks.scss
+++ b/_sass/pages/_thanks.scss
@@ -7,6 +7,16 @@
     height: 100vh;
   }
 
+  &__smile {
+    @include respond(phone) {
+      display: none;
+    }
+  }
+
+  &__description {
+    text-align: center;
+  }
+
   &__goback {
     margin-top: 3rem;
   }
